[package]
name = "spotify-exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rspotify = { version = "0.12", default-features = false, features = ["cli", "env-file", "client-ureq", "ureq-rustls-tls"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.21"
futures-util = "0.3.21"
clap = { version = "3.1.18", features = ["derive"] }
async-trait = { version = "0.1.53" }
html-escape = "0.2.11"
serde_json = "1.0"